0.2.0/src/docs/samples/jni-library-with-target-machines/index.adoc
:jbake-version: 0.2.0
:toc:
:toclevels: 1
:toc-title: Contents
:icons: font
:idprefix:
:jbake-status: published
:encoding: utf-8
:lang: en-US
:sectanchors: true
:sectlinks: true
:linkattrs: true
:gradle-user-manual: https://docs.gradle.org/6.2.1/userguide
:gradle-language-reference: https://docs.gradle.org/6.2.1/dsl
:gradle-api-reference: https://docs.gradle.org/6.2.1/javadoc
:gradle-guides: https://guides.gradle.org/
:jbake-permalink: jni-library-with-target-machines
:jbake-archivebasename: JniLibraryWithTargetMachines
:includedir: .
= JNI Library Target Machines Configuration
:jbake-summary: Configure the target machines for a JNI library.
:jbake-type: sample_chapter
:jbake-tags: sample, jni, java, jvm, library, target machines, native, c++, gradle
:jbake-category: Java Native Interface (JNI)
:jbake-description: See how to configure the target machines of a Java Native Interface (JNI) library using the Gradle Nokee plugins.

NOTE: You can open this sample inside an IDE using the https://www.jetbrains.com/help/idea/gradle.html#gradle_import_project_start[IntelliJ native importer] or https://projects.eclipse.org/projects/tools.buildship[Eclipse Buildship].

This sample shows how a Java Native Interface (JNI) library can target multiple machines.
The library has no dependencies, and the build has a minimal configuration.

In this sample, we are configuring the target machines of a JNI library implemented in Java and {cpp}; however, this applies to other JVM and native languages as well.

====
[.multi-language-sample]
=====
.build.gradle
[source,groovy]
----
include::{includedir}/groovy-dsl/build.gradle[]
----
=====
[.multi-language-sample]
=====
.build.gradle.kts
[source,kotlin]
----
include::{includedir}/kotlin-dsl/build.gradle.kts[]
----
=====
====

To build the library:

[listing.terminal]
----
$ ./gradlew assemble

BUILD SUCCESSFUL
5 actionable tasks: 5 executed
----

The JNI library JARs produced inside `./build/libs` directory:

[listing.terminal,only-if='macos']
----
$ ls ./build/libs/*.jar
./build/libs/jni-library-with-target-machines-macos.jar
./build/libs/jni-library-with-target-machines.jar
----

It's also important to note that when multiple target platform are configured, the native component will be namespaced inside their own variant directory.
Gradle will also produce a separated JAR for each variant:

[listing.terminal]
----
$ jar tf ./build/libs/jni-library-with-target-machines.jar
META-INF/
META-INF/MANIFEST.MF
com/
com/example/
com/example/greeter/
com/example/greeter/NativeLoader.class
com/example/greeter/Greeter.class
----
[listing.terminal,only-if='macos']
----
$ jar tf ./build/libs/jni-library-with-target-machines-macos.jar
META-INF/
META-INF/MANIFEST.MF
macos/
macos/libjni-library-with-target-machines.dylib
----

For more information, see <<../../manual/jni-library-plugin.adoc#,JNI Library Plugin reference chapter>>.
